fix last row layout gap

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ div {
 
 .flex {
   display: flex;
-  gap: 5px;
+  gap: 4px;
+  padding: 0.001px;
 }
 
